// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Same generated concise ts interface 1`] = `
"/*Automatically generated by expo-type-information.*/

import { ViewProps } from 'react-native';

import { NativeModule } from 'expo';

// These types haven't been defined in provided file(s).
export type URL = unknown;
export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;

export type TestRecord = {
  basicString: string;
  basicStringInitialized: string;
  basicIntInferred: number;
  basicDoubleInferred: number;
  basicStringInferred: string;
  enumInferred: TestEnum;
  complexEnumInferred: TestEnum;
  recordInferred: TestRecord2;
  optionalInt?: number;
  letDoubleBinding: number;
};
export type TestRecord2 = {
  field1: number;
  field2: string;
};
export type TestRecordClass = {
  field1: number;
  field2: string;
};

export enum TestEnum {
  simpleCase,
  multipleCases1,
  multipleCases2,
  caseWithArgs1,
  caseWithArgs2
}

export declare class TestClassWithConstructor {
  constructor(a: number);
}
export declare class TestBasicClass {
  TestAsyncFunction(a: number): Promise<string>;
  readonly TestIntProperty: number;
  readonly TestEitherProperty: number | string;
  readonly TestEnumProperty: TestEnum;
  readonly TestRecordProperty: TestRecord2;
  constructor(a: number, b: string, c: string | TestRecord);
}
export declare class TestEmptyClass {}

export interface ExpoWebViewProps extends ViewProps {
  url: URL;
  testRecord: TestRecord;
  testRecord2: TestRecord2;
  testRecordClass: TestRecordClass;
  testEnum: TestEnum;
  onEvent1?: (event: any) => void;
  onEvent2?: (event: any) => void;
}

export declare class TestModuleNativeModuleType extends NativeModule {
  readonly StringConstant: number;
  readonly IntConstant: number;
  readonly UntypedConstant: unknown /*The type couldn't be resolved automatically.*/;
  SimpleFunction(a: number, b: number): number;
  TestUntypedFunction(): string;
  TestUntypedFunction2(): TestEnum;
  TestUntypedFunction3(): TestRecord2;
  TestArrays(a: number[]): string[][];
  TestDictionaries(
    a: {
      [key: number]: string;
    },
    b: {
      [key: number]: {
        [key: number]: string;
      };
    }
  ): any;
  TestParametrizedTypes(
    a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>
  ): string;
  TestTypeCombinations(a: number[][][]): (
    | string
    | {
        [key: number]: string;
      }
  )[][];
  TestFunctionReturningRecord(): TestRecord;
  TestFunctionReturningEnum(): TestEnum;
  TestSimpleAsyncFunction(a: string, b: string): Promise<string>;
  TestUnderscore(
    url: URL,
    _4: BarcodeType[]
  ): Promise<unknown /*The type couldn't be resolved automatically.*/>;
  TestClassWithConstructor: typeof TestClassWithConstructor;
  TestBasicClass: typeof TestBasicClass;
  TestEmptyClass: typeof TestEmptyClass;
}
"
`;

exports[`Same generated concise ts interface 2`] = `
"import React from 'react';

import {
  TestEnum,
  TestRecord2,
  URL,
  BarcodeType,
  SomeParametrizedType,
  TestRecord,
  TestRecordClass,
  TestModuleNativeModuleType,
  ExpoWebViewProps
} from './TestModule.generated';

import { requireNativeModule, requireNativeView } from 'expo';

const TestModule: TestModuleNativeModuleType =
  requireNativeModule<TestModuleNativeModuleType>('TestModule');

const ExpoWebView = requireNativeView<ExpoWebViewProps>('TestModule', 'ExpoWebView');

export const StringConstant: number = TestModule.StringConstant;
export const IntConstant: number = TestModule.IntConstant;
export const UntypedConstant: unknown /*The type couldn't be resolved automatically.*/ =
  TestModule.UntypedConstant;

export function SimpleFunction(a: number, b: number) {
  return TestModule.SimpleFunction(a, b);
}
export function TestUntypedFunction() {
  return TestModule.TestUntypedFunction();
}
export function TestUntypedFunction2() {
  return TestModule.TestUntypedFunction2();
}
export function TestUntypedFunction3() {
  return TestModule.TestUntypedFunction3();
}
export function TestArrays(a: number[]) {
  return TestModule.TestArrays(a);
}
export function TestDictionaries(
  a: {
    [key: number]: string;
  },
  b: {
    [key: number]: {
      [key: number]: string;
    };
  }
) {
  return TestModule.TestDictionaries(a, b);
}
export function TestParametrizedTypes(
  a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>
) {
  return TestModule.TestParametrizedTypes(a);
}
export function TestTypeCombinations(a: number[][][]) {
  return TestModule.TestTypeCombinations(a);
}
export function TestFunctionReturningRecord() {
  return TestModule.TestFunctionReturningRecord();
}
export function TestFunctionReturningEnum() {
  return TestModule.TestFunctionReturningEnum();
}

export async function TestSimpleAsyncFunction(a: string, b: string) {
  return TestModule.TestSimpleAsyncFunction(a, b);
}
export async function TestUnderscore(url: URL, _5: BarcodeType[]) {
  return TestModule.TestUnderscore(url, _5);
}

export default function ExpoWebViewComponent(props: ExpoWebViewProps) {
  return <ExpoWebView {...props} />;
}
"
`;

exports[`Same generated full ts interface 1`] = `
{
  "indexFile": {
    "content": "/*Automatically generated by expo-type-information.*/

export type * from './TestModule.types';

export { default as TestModule } from './TestModuleModule';

export { default as ExpoWebView } from './ExpoWebViewView';
",
    "name": "index.ts",
  },
  "moduleNativeFile": {
    "content": "/*Automatically generated by expo-type-information.*/

import { requireNativeModule, NativeModule } from 'expo';

import {
  TestEnum,
  TestRecord,
  TestRecord2,
  TestRecordClass,
  TestClassWithConstructor,
  TestBasicClass,
  TestEmptyClass,
  URL,
  BarcodeType,
  SomeParametrizedType
} from './TestModule.types';

export declare class TestModule extends NativeModule {
  readonly StringConstant: number;
  readonly IntConstant: number;
  readonly UntypedConstant: unknown /*The type couldn't be resolved automatically.*/;
  SimpleFunction(a: number, b: number): number;
  TestUntypedFunction(): string;
  TestUntypedFunction2(): TestEnum;
  TestUntypedFunction3(): TestRecord2;
  TestArrays(a: number[]): string[][];
  TestDictionaries(
    a: {
      [key: number]: string;
    },
    b: {
      [key: number]: {
        [key: number]: string;
      };
    }
  ): any;
  TestParametrizedTypes(
    a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>
  ): string;
  TestTypeCombinations(a: number[][][]): (
    | string
    | {
        [key: number]: string;
      }
  )[][];
  TestFunctionReturningRecord(): TestRecord;
  TestFunctionReturningEnum(): TestEnum;
  TestSimpleAsyncFunction(a: string, b: string): Promise<string>;
  TestUnderscore(
    url: URL,
    _6: BarcodeType[]
  ): Promise<unknown /*The type couldn't be resolved automatically.*/>;
  TestClassWithConstructor: typeof TestClassWithConstructor;
  TestBasicClass: typeof TestBasicClass;
  TestEmptyClass: typeof TestEmptyClass;
}

const _default: TestModule = requireNativeModule<TestModule>('TestModule');
export default _default;
",
    "name": "TestModuleModule.ts",
  },
  "moduleTypesFile": {
    "content": "/*Automatically generated by expo-type-information.*/

import { ViewProps } from 'react-native';

import { NativeModule } from 'expo';

// These types haven't been defined in provided file(s).
export type URL = unknown;
export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;

export type TestRecord = {
  basicString: string;
  basicStringInitialized: string;
  basicIntInferred: number;
  basicDoubleInferred: number;
  basicStringInferred: string;
  enumInferred: TestEnum;
  complexEnumInferred: TestEnum;
  recordInferred: TestRecord2;
  optionalInt?: number;
  letDoubleBinding: number;
};
export type TestRecord2 = {
  field1: number;
  field2: string;
};
export type TestRecordClass = {
  field1: number;
  field2: string;
};

export enum TestEnum {
  simpleCase,
  multipleCases1,
  multipleCases2,
  caseWithArgs1,
  caseWithArgs2
}

export declare class TestClassWithConstructor {
  constructor(a: number);
}
export declare class TestBasicClass {
  TestAsyncFunction(a: number): Promise<string>;
  readonly TestIntProperty: number;
  readonly TestEitherProperty: number | string;
  readonly TestEnumProperty: TestEnum;
  readonly TestRecordProperty: TestRecord2;
  constructor(a: number, b: string, c: string | TestRecord);
}
export declare class TestEmptyClass {}

export interface ExpoWebViewProps extends ViewProps {
  url: URL;
  testRecord: TestRecord;
  testRecord2: TestRecord2;
  testRecordClass: TestRecordClass;
  testEnum: TestEnum;
  onEvent1?: (event: any) => void;
  onEvent2?: (event: any) => void;
}
",
    "name": "TestModule.types.ts",
  },
  "moduleViewsFiles": [
    {
      "content": "/*Automatically generated by expo-type-information.*/

import { requireNativeView } from 'expo';

import { ExpoWebViewProps } from './TestModule.types';

const ExpoWebView = requireNativeView<ExpoWebViewProps>('TestModule', 'ExpoWebView');

export default function ExpoWebViewComponent(props: ExpoWebViewProps) {
  return <ExpoWebView {...props} />;
}
",
      "name": "ExpoWebViewView.tsx",
    },
  ],
}
`;

exports[`Same generated mock file 1`] = `
"/**
 * Automatically generated by expo-type-information.
 * 
 * This autogenerated file provides a mock for native Expo module,
 * and works out of the box with the expo jest preset.
 *  */


export type URL = unknown;
export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;


export type TestRecord = {
    basicString: string;
    basicStringInitialized: string;
    basicIntInferred: number;
    basicDoubleInferred: number;
    basicStringInferred: string;
    enumInferred: TestEnum;
    complexEnumInferred: TestEnum;
    recordInferred: TestRecord2;
    optionalInt?: number;
    letDoubleBinding: number;
};
export type TestRecord2 = {
    field1: number;
    field2: string;
};
export type TestRecordClass = {
    field1: number;
    field2: string;
};


export enum TestEnum {
    simpleCase,
    multipleCases1,
    multipleCases2,
    caseWithArgs1,
    caseWithArgs2
}


export function SimpleFunction(a: number, b: number): number { return 0; }
export function TestUntypedFunction(): string { return ""; }
export function TestUntypedFunction2(): TestEnum { return TestEnum.simpleCase; }
export function TestUntypedFunction3(): TestRecord2 { return { field1: 0, field2: "" }; }
export function TestArrays(a: number[]): string[][] { return []; }
export function TestDictionaries(a: {
    [key: number]: string;
}, b: {
    [key: number]: {
        [key: number]: string;
    };
}): any { }
export function TestParametrizedTypes(a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>): string { return ""; }
export function TestTypeCombinations(a: number[][][]): (string | {
    [key: number]: string;
})[][] { return []; }
export function TestFunctionReturningRecord(): TestRecord { return { basicString: "", basicStringInitialized: "", basicIntInferred: 0, basicDoubleInferred: 0, basicStringInferred: "", enumInferred: TestEnum.simpleCase, complexEnumInferred: TestEnum.simpleCase, recordInferred: { field1: 0, field2: "" }, optionalInt: 0, letDoubleBinding: 0 }; }
export function TestFunctionReturningEnum(): TestEnum { return TestEnum.simpleCase; }


export async function TestSimpleAsyncFunction(a: string, b: string): Promise<string> { return ""; }
export async function TestUnderscore(url: URL, _2: BarcodeType[]): Promise<unknown /*The type couldn't be resolved automatically.*/> { return; }


export class TestClassWithConstructor {
    constructor(a: number) { }
}
export class TestBasicClass {
    async TestAsyncFunction(a: number): Promise<string> { return ""; }
    constructor(a: number, b: string, c: string | TestRecord) { }
}
export class TestEmptyClass {
}


export interface ExpoWebViewProps extends ViewProps {
    url: URL;
    testRecord: TestRecord;
    testRecord2: TestRecord2;
    testRecordClass: TestRecordClass;
    testEnum: TestEnum;
    onEvent1?: (event: any) => void;
    onEvent2?: (event: any) => void;
}
export function ExpoWebView(props: ExpoWebViewProps) { }


"
`;

exports[`Same generated mock file JS 1`] = `
"/**
 * Automatically generated by expo-type-information.
 *
 * This autogenerated file provides a mock for native Expo module,
 * and works out of the box with the expo jest preset.
 *  */
export var TestEnum;
(function (TestEnum) {
    TestEnum[TestEnum["simpleCase"] = 0] = "simpleCase";
    TestEnum[TestEnum["multipleCases1"] = 1] = "multipleCases1";
    TestEnum[TestEnum["multipleCases2"] = 2] = "multipleCases2";
    TestEnum[TestEnum["caseWithArgs1"] = 3] = "caseWithArgs1";
    TestEnum[TestEnum["caseWithArgs2"] = 4] = "caseWithArgs2";
})(TestEnum || (TestEnum = {}));
export function SimpleFunction(a, b) { return 0; }
export function TestUntypedFunction() { return ""; }
export function TestUntypedFunction2() { return TestEnum.simpleCase; }
export function TestUntypedFunction3() { return { field1: 0, field2: "" }; }
export function TestArrays(a) { return []; }
export function TestDictionaries(a, b) { }
export function TestParametrizedTypes(a) { return ""; }
export function TestTypeCombinations(a) { return []; }
export function TestFunctionReturningRecord() { return { basicString: "", basicStringInitialized: "", basicIntInferred: 0, basicDoubleInferred: 0, basicStringInferred: "", enumInferred: TestEnum.simpleCase, complexEnumInferred: TestEnum.simpleCase, recordInferred: { field1: 0, field2: "" }, optionalInt: 0, letDoubleBinding: 0 }; }
export function TestFunctionReturningEnum() { return TestEnum.simpleCase; }
export async function TestSimpleAsyncFunction(a, b) { return ""; }
export async function TestUnderscore(url, _3) { return; }
export class TestClassWithConstructor {
    constructor(a) { }
}
export class TestBasicClass {
    async TestAsyncFunction(a) { return ""; }
    constructor(a, b, c) { }
}
export class TestEmptyClass {
}
export function ExpoWebView(props) { }
"
`;

exports[`Same generated module file 1`] = `
"/*Automatically generated by expo-type-information.*/

import { NativeModule } from 'expo';

// These types haven't been defined in provided file(s).
export type URL = unknown;
export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;

export type TestRecord = {
  basicString: string;
  basicStringInitialized: string;
  basicIntInferred: number;
  basicDoubleInferred: number;
  basicStringInferred: string;
  enumInferred: TestEnum;
  complexEnumInferred: TestEnum;
  recordInferred: TestRecord2;
  optionalInt?: number;
  letDoubleBinding: number;
};
export type TestRecord2 = {
  field1: number;
  field2: string;
};
export type TestRecordClass = {
  field1: number;
  field2: string;
};

export enum TestEnum {
  simpleCase,
  multipleCases1,
  multipleCases2,
  caseWithArgs1,
  caseWithArgs2
}

export declare class TestClassWithConstructor {
  constructor(a: number);
}
export declare class TestBasicClass {
  TestAsyncFunction(a: number): Promise<string>;
  readonly TestIntProperty: number;
  readonly TestEitherProperty: number | string;
  readonly TestEnumProperty: TestEnum;
  readonly TestRecordProperty: TestRecord2;
  constructor(a: number, b: string, c: string | TestRecord);
}
export declare class TestEmptyClass {}

export declare class TestModuleNativeModuleType extends NativeModule {
  readonly StringConstant: number;
  readonly IntConstant: number;
  readonly UntypedConstant: unknown /*The type couldn't be resolved automatically.*/;
  SimpleFunction(a: number, b: number): number;
  TestUntypedFunction(): string;
  TestUntypedFunction2(): TestEnum;
  TestUntypedFunction3(): TestRecord2;
  TestArrays(a: number[]): string[][];
  TestDictionaries(
    a: {
      [key: number]: string;
    },
    b: {
      [key: number]: {
        [key: number]: string;
      };
    }
  ): any;
  TestParametrizedTypes(
    a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>
  ): string;
  TestTypeCombinations(a: number[][][]): (
    | string
    | {
        [key: number]: string;
      }
  )[][];
  TestFunctionReturningRecord(): TestRecord;
  TestFunctionReturningEnum(): TestEnum;
  TestSimpleAsyncFunction(a: string, b: string): Promise<string>;
  TestUnderscore(
    url: URL,
    _1: BarcodeType[]
  ): Promise<unknown /*The type couldn't be resolved automatically.*/>;
  TestClassWithConstructor: typeof TestClassWithConstructor;
  TestBasicClass: typeof TestBasicClass;
  TestEmptyClass: typeof TestEmptyClass;
}

const _default: TestModule;
export default _default;
"
`;

exports[`Same generated view file 1`] = `
"/*Automatically generated by expo-type-information.*/

import { ViewProps } from 'react-native';

// These types haven't been defined in provided file(s).
export type URL = unknown;
export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;

interface ExpoWebViewProps extends ViewProps {
  url: URL;
  testRecord: TestRecord;
  testRecord2: TestRecord2;
  testRecordClass: TestRecordClass;
  testEnum: TestEnum;
  onEvent1?: (event: any) => void;
  onEvent2?: (event: any) => void;
}

declare const _default: React.JSXElementConstructor<ExpoWebViewProps>;

export default _default;
"
`;

exports[`Same type information 1`] = `
{
  "declaredTypeIdentifiersList": [
    "TestBasicClass",
    "TestClassWithConstructor",
    "TestEmptyClass",
    "TestEnum",
    "TestRecord",
    "TestRecord2",
    "TestRecordClass",
  ],
  "enums": [
    {
      "cases": [
        "simpleCase",
        "multipleCases1",
        "multipleCases2",
        "caseWithArgs1",
        "caseWithArgs2",
      ],
      "name": "TestEnum",
    },
  ],
  "inferredTypeParametersCountList": [
    [
      "Map",
      2,
    ],
    [
      "Set",
      1,
    ],
    [
      "SomeParametrizedType",
      2,
    ],
  ],
  "moduleClasses": [
    {
      "asyncFunctions": [
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "b",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "definitionOffset": 2253,
          "name": "TestSimpleAsyncFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "arguments": [
            {
              "name": "url",
              "type": {
                "kind": 1,
                "type": "URL",
              },
            },
            {
              "name": undefined,
              "type": {
                "kind": 5,
                "type": {
                  "kind": 1,
                  "type": "BarcodeType",
                },
              },
            },
          ],
          "definitionOffset": 2444,
          "name": "TestUnderscore",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 6,
          },
        },
      ],
      "classes": [
        {
          "asyncMethods": [],
          "constructor": {
            "arguments": [
              {
                "name": "a",
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
            ],
            "definitionOffset": 2570,
          },
          "definitionOffset": 2524,
          "methods": [],
          "name": "TestClassWithConstructor",
          "properties": [],
        },
        {
          "asyncMethods": [
            {
              "arguments": [
                {
                  "name": "a",
                  "type": {
                    "kind": 0,
                    "type": 2,
                  },
                },
              ],
              "definitionOffset": 3112,
              "name": "TestAsyncFunction",
              "parameters": [],
              "returnType": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "constructor": {
            "arguments": [
              {
                "name": "a",
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
              {
                "name": "b",
                "type": {
                  "kind": 0,
                  "type": 1,
                },
              },
              {
                "name": "c",
                "type": {
                  "kind": 2,
                  "type": {
                    "name": "Either",
                    "types": [
                      {
                        "kind": 0,
                        "type": 1,
                      },
                      {
                        "kind": 1,
                        "type": "TestRecord",
                      },
                    ],
                  },
                },
              },
            ],
            "definitionOffset": 2672,
          },
          "definitionOffset": 2636,
          "methods": [],
          "name": "TestBasicClass",
          "properties": [
            {
              "definitionOffset": 2776,
              "name": "TestIntProperty",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "definitionOffset": 2844,
              "name": "TestEitherProperty",
              "type": {
                "kind": 2,
                "type": {
                  "name": "Either",
                  "types": [
                    {
                      "kind": 0,
                      "type": 2,
                    },
                    {
                      "kind": 0,
                      "type": 1,
                    },
                  ],
                },
              },
            },
            {
              "definitionOffset": 2931,
              "name": "TestEnumProperty",
              "type": {
                "kind": 1,
                "type": "TestEnum",
              },
            },
            {
              "definitionOffset": 3015,
              "name": "TestRecordProperty",
              "type": {
                "kind": 1,
                "type": "TestRecord2",
              },
            },
          ],
        },
        {
          "asyncMethods": [],
          "constructor": null,
          "definitionOffset": 3214,
          "methods": [],
          "name": "TestEmptyClass",
          "properties": [],
        },
      ],
      "constants": [
        {
          "definitionOffset": 125,
          "name": "StringConstant",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "definitionOffset": 288,
          "name": "IntConstant",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "definitionOffset": 426,
          "name": "UntypedConstant",
          "type": {
            "kind": 0,
            "type": 6,
          },
        },
      ],
      "constructor": null,
      "definitionOffset": 81,
      "events": [],
      "functions": [
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "b",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
          ],
          "definitionOffset": 472,
          "name": "SimpleFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 636,
          "name": "TestUntypedFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 780,
          "name": "TestUntypedFunction2",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": "TestEnum",
          },
        },
        {
          "arguments": [],
          "definitionOffset": 948,
          "name": "TestUntypedFunction3",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": "TestRecord2",
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 5,
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
            },
          ],
          "definitionOffset": 1114,
          "name": "TestArrays",
          "parameters": [],
          "returnType": {
            "kind": 5,
            "type": {
              "kind": 5,
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 6,
                "type": {
                  "key": {
                    "kind": 0,
                    "type": 2,
                  },
                  "value": {
                    "kind": 0,
                    "type": 1,
                  },
                },
              },
            },
            {
              "name": "b",
              "type": {
                "kind": 6,
                "type": {
                  "key": {
                    "kind": 0,
                    "type": 2,
                  },
                  "value": {
                    "kind": 6,
                    "type": {
                      "key": {
                        "kind": 0,
                        "type": 2,
                      },
                      "value": {
                        "kind": 0,
                        "type": 1,
                      },
                    },
                  },
                },
              },
            },
          ],
          "definitionOffset": 1273,
          "name": "TestDictionaries",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 0,
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 3,
                "type": {
                  "name": "SomeParametrizedType",
                  "types": [
                    {
                      "kind": 2,
                      "type": {
                        "name": "Either",
                        "types": [
                          {
                            "kind": 0,
                            "type": 2,
                          },
                          {
                            "kind": 0,
                            "type": 1,
                          },
                        ],
                      },
                    },
                    {
                      "kind": 3,
                      "type": {
                        "name": "Map",
                        "types": [
                          {
                            "kind": 3,
                            "type": {
                              "name": "Set",
                              "types": [
                                {
                                  "kind": 0,
                                  "type": 2,
                                },
                              ],
                            },
                          },
                          {
                            "kind": 2,
                            "type": {
                              "name": "Either",
                              "types": [
                                {
                                  "kind": 3,
                                  "type": {
                                    "name": "Set",
                                    "types": [
                                      {
                                        "kind": 0,
                                        "type": 2,
                                      },
                                    ],
                                  },
                                },
                                {
                                  "kind": 3,
                                  "type": {
                                    "name": "Set",
                                    "types": [
                                      {
                                        "kind": 0,
                                        "type": 1,
                                      },
                                    ],
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            },
          ],
          "definitionOffset": 1466,
          "name": "TestParametrizedTypes",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 5,
                "type": {
                  "kind": 5,
                  "type": {
                    "kind": 5,
                    "type": {
                      "kind": 0,
                      "type": 2,
                    },
                  },
                },
              },
            },
          ],
          "definitionOffset": 1710,
          "name": "TestTypeCombinations",
          "parameters": [],
          "returnType": {
            "kind": 5,
            "type": {
              "kind": 5,
              "type": {
                "kind": 2,
                "type": {
                  "name": "Either",
                  "types": [
                    {
                      "kind": 0,
                      "type": 1,
                    },
                    {
                      "kind": 6,
                      "type": {
                        "key": {
                          "kind": 0,
                          "type": 2,
                        },
                        "value": {
                          "kind": 0,
                          "type": 1,
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1911,
          "name": "TestFunctionReturningRecord",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": "TestRecord",
          },
        },
        {
          "arguments": [],
          "definitionOffset": 2076,
          "name": "TestFunctionReturningEnum",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": "TestEnum",
          },
        },
      ],
      "name": "TestModule",
      "properties": [],
      "props": [],
      "views": [
        {
          "asyncFunctions": [],
          "classes": [],
          "constants": [],
          "constructor": null,
          "definitionOffset": 3277,
          "events": [
            "onEvent1",
            "onEvent2",
          ],
          "functions": [],
          "name": "ExpoWebView",
          "properties": [],
          "props": [
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 6,
                  },
                },
                {
                  "name": "url",
                  "type": {
                    "kind": 1,
                    "type": "URL",
                  },
                },
              ],
              "definitionOffset": 3323,
              "name": "url",
            },
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 6,
                  },
                },
                {
                  "name": "testRecord",
                  "type": {
                    "kind": 1,
                    "type": "TestRecord",
                  },
                },
              ],
              "definitionOffset": 3507,
              "name": "testRecord",
            },
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 6,
                  },
                },
                {
                  "name": "testRecord2",
                  "type": {
                    "kind": 1,
                    "type": "TestRecord2",
                  },
                },
              ],
              "definitionOffset": 3578,
              "name": "testRecord2",
            },
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 6,
                  },
                },
                {
                  "name": "testRecordClass",
                  "type": {
                    "kind": 1,
                    "type": "TestRecordClass",
                  },
                },
              ],
              "definitionOffset": 3652,
              "name": "testRecordClass",
            },
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 6,
                  },
                },
                {
                  "name": "testEnum",
                  "type": {
                    "kind": 1,
                    "type": "TestEnum",
                  },
                },
              ],
              "definitionOffset": 3738,
              "name": "testEnum",
            },
          ],
          "views": [],
        },
      ],
    },
  ],
  "records": [
    {
      "fields": [
        {
          "name": "basicString",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "basicStringInitialized",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "basicIntInferred",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "basicDoubleInferred",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "basicStringInferred",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "enumInferred",
          "type": {
            "kind": 1,
            "type": "TestEnum",
          },
        },
        {
          "name": "complexEnumInferred",
          "type": {
            "kind": 1,
            "type": "TestEnum",
          },
        },
        {
          "name": "recordInferred",
          "type": {
            "kind": 1,
            "type": "TestRecord2",
          },
        },
        {
          "name": "optionalInt",
          "type": {
            "kind": 4,
            "type": {
              "kind": 0,
              "type": 2,
            },
          },
        },
        {
          "name": "letDoubleBinding",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
      ],
      "name": "TestRecord",
    },
    {
      "fields": [
        {
          "name": "field1",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "field2",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
      ],
      "name": "TestRecord2",
    },
    {
      "fields": [
        {
          "name": "field1",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "field2",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
      ],
      "name": "TestRecordClass",
    },
  ],
  "typeIdentifierDefinitionList": [
    [
      "TestEnum",
      {
        "definition": {
          "cases": [
            "simpleCase",
            "multipleCases1",
            "multipleCases2",
            "caseWithArgs1",
            "caseWithArgs2",
          ],
          "name": "TestEnum",
        },
        "kind": 1,
      },
    ],
    [
      "TestRecord",
      {
        "definition": {
          "fields": [
            {
              "name": "basicString",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "basicStringInitialized",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "basicIntInferred",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "basicDoubleInferred",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "basicStringInferred",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "enumInferred",
              "type": {
                "kind": 1,
                "type": "TestEnum",
              },
            },
            {
              "name": "complexEnumInferred",
              "type": {
                "kind": 1,
                "type": "TestEnum",
              },
            },
            {
              "name": "recordInferred",
              "type": {
                "kind": 1,
                "type": "TestRecord2",
              },
            },
            {
              "name": "optionalInt",
              "type": {
                "kind": 4,
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
            },
            {
              "name": "letDoubleBinding",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
          ],
          "name": "TestRecord",
        },
        "kind": 2,
      },
    ],
    [
      "TestRecord2",
      {
        "definition": {
          "fields": [
            {
              "name": "field1",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "field2",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "name": "TestRecord2",
        },
        "kind": 2,
      },
    ],
    [
      "TestRecordClass",
      {
        "definition": {
          "fields": [
            {
              "name": "field1",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "field2",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "name": "TestRecordClass",
        },
        "kind": 2,
      },
    ],
  ],
  "usedTypeIdentifiersList": [
    "BarcodeType",
    "Map",
    "Set",
    "SomeParametrizedType",
    "TestEnum",
    "TestRecord",
    "TestRecord2",
    "TestRecordClass",
    "URL",
  ],
}
`;
